--- a/views/Facturacion/Objeciones/responder.html
+++ b/views/Facturacion/Objeciones/responder.html
@@ -95,10 +95,11 @@
                         <tr>
                             <th>N° Despacho</th>
                             <th>Proveedor</th>
-                            <th>Tipo de Camión</th>
+                            <th>Tipo de Cami&oacute;n</th>
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Estado</th>
+                            <th>Observaci&oacute;n</th>
                             <th>Tarifa</th>
                             <th>Seleccionar</th>
                         </tr>
@@ -111,6 +112,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>				
                             <td>360,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -121,6 +123,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>17 TI-TALCA</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>	
                             <td>490,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -131,6 +134,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>15 ARICA</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>	
                             <td>550,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -141,6 +145,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>14 PUERTO MONTT</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>	
                             <td>680,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -151,6 +156,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>36 ANTOFAGASTA</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>	
                             <td>705,000</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
@@ -161,6 +167,7 @@
                             <td>00 CD-SANTIAGO</td>
                             <td>19 LA FLORIDA</td>
                             <td>OBJETADO</td>
+                            <td>TARIFA ESPECIAL ACORDADA PARA ESTE VIAJE.</td>	
                             <td>90,500</td>
                             <td><input type="checkbox" value="es"> </td>
                         </tr>
