--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -169,6 +169,7 @@
                     <ul class="sub-menu">
                         <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.salida">Salida</a></li>
                         <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.itinerario">Itinerario</a></li>
+                        <li ui-sref-active="active"><a ui-sref="app.gestion.validaciones.despacho">Consulta Despachos</a></li>
                     </ul>
                     </li>
                     <li class="has-sub" ng-class="{active:$state.includes('app.gestion.manifiestos')}">
