--- a/views/Gestion/Solicitud/publicar.html
+++ b/views/Gestion/Solicitud/publicar.html
@@ -81,8 +81,18 @@
                                     <option>Recibido</option>
                                 </select>
                             </div>
-                        </div>
+							<label class="col-md-2 control-label">Tipo de Solicitud</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Programada</option>
+                                    <option>Express</option>
+									<option>Despacho Directo Cliente</option>
 
+                                </select>
+                            </div>
+                        </div>
+						
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
@@ -118,7 +128,7 @@
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>Fecha</th>
-
+							<th>Tipo Solicitud</th>
                             <th>Publicar</th>
                         </tr>
                         </thead>
@@ -128,54 +138,49 @@
                             <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>45 CONCEPCIÓN</td>
-                            <td>12/12/16 14:59:02-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>12/12/16 14:59:02-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14222</a></td>
                             <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>41 TALCA</td>
-                            <td>12/12/16 15:01:14-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>12/12/16 15:01:14-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
                             <td>Trasportes del Pacifico</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>14 ANTOFAGASTA</td>
-                            <td>12/12/16 15:11:46-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>12/12/16 15:11:46-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14223</a></td>
                             <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>15 CALAMA</td>
-                            <td>12/12/16 15:14:59-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>12/12/16 15:14:59-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14224</a></td>
                             <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>05 PARQUE ARAUCO</td>
-                            <td>05/01/17 10:14:59-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>05/01/17 10:14:59-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         <tr class="odd gradeX">
                             <td><a href="carga_todos.html">14225</a></td>
                             <td>Trasportes PIPAU</td>
                             <td>00 CD-SANTIAGO</td>
                             <td>12 MALL PLAZA NORTE</td>
-                            <td>05/01/17 09:04:59-Z</td>
-
-                            <td><input type="checkbox" value="es"> </td>
+                            <td>05/01/17 09:04:59-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
+                        </tr>
+						<tr class="odd gradeX">
+                            <td><a href="carga_todos.html">14226</a></td>
+                            <td>Trasportes PIPAU</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>12 MALL PLAZA OESTE</td>
+                            <td>05/01/17 09:04:59-Z</td><td>PROGRAMADA</td>  <td><input type="checkbox" value="es"> </td>
                         </tr>
                         </tbody>
                     </table>
