--- a/views/Facturacion/Aprobacion/aprueba.html
+++ b/views/Facturacion/Aprobacion/aprueba.html
@@ -1,1 +1,242 @@
-aprueba OF
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Facturación</a></li>
+        <li><a href="javascript:;">Aprueba OF</a></li>
+        <li class="active">20101 - Aprueba Orden de Facturación</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Aprueba OF <small>Gestión de Facturación</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+        <div class="col-md-12">
+            		<div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">N&uacute;mero de OF</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                            <label class="col-md-3 control-label">Transportista</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado OF</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <!-- <label class="col-md-2 control-label">Destino</label> -->
+                            <!-- <div class="col-md-2"> -->
+                                <!-- <select class="form-control"> -->
+                                    <!-- <option>Todos</option> -->
+                                    <!-- <option>45 CONCEPCION</option> -->
+                                    <!-- <option>41 TALCA</option> -->
+                                <!-- </select> -->
+                            <!-- </div> -->
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-6">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">N&uacute;mero de Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                            <label class="col-md-3 control-label">Tipo de Viaje</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option></option>
+                                    <option></option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+		
+     
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">DETALLE OF </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>OF</th>
+                            <th>Proveedor</th>
+                            <th>Tipo de Viaje</th>
+							<th>Fecha Fact</th>		
+                            <th>Tarifa</th>
+							<th>Aprobar</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">10000</a></td>
+                          
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>TRONCAL</td>
+							<td>09/02/17 12:15:12 </td>
+                            <td>360,500</td>
+                           
+                            <td><a class="btn btn-success btn-circle m-r-2"  ng-click="verificarMoneda_Tipo()"><i class="fa fa-plus-square"></i></a> </td>
+                        </tr>
+
+                        </tbody>
+                    </table>
+
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Tabla Manifiestos de Carga </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Viaje</th>
+                            <th>N° MC</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125412</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41-TALCA</td>
+                            <td>12/12/16 14:59:02-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125413</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41 TALCA</td>
+                            <td>12/12/16 15:01:14-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125414</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>41-TALCA</td>
+                            <td>12/12/16 15:11:46-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125415</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45-CONCEPCION</td>
+                            <td>12/12/16 15:14:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125416</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45-CONCEPCION</td>
+                            <td>05/01/17 10:14:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="carga_todos.html">214222</a></td>
+                            <td>125417</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>45- CONCEPCION</td>
+                            <td>05/01/17 09:04:59-Z</td>
+                            <td>ENTREGADO</td>
+
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
