--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -54,6 +54,7 @@
                             <label class="col-md-3 control-label">Acciones:</label>
                             <div class="col-md-9">
                                 <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+<button class="btn btn-sm btn-danger " >Cancelar</button>
                             </div>
                         </div>
                       </form>
