--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -195,14 +195,14 @@
                     <li class="has-sub" ng-class="{active:$state.includes('app.gestion.documento')}">
                         <a href="javascript:;"><b class="caret pull-right"></b>Documento ND</a>
                         <ul class="sub-menu">
-                            <li class="has-sub" ng-class="{active:$state.includes('app.gestion.documento.devolucion)}">
+                            <li class="has-sub" ng-class="{active:$state.includes('app.gestion.documento.devolucion')}">
                                 <a href="javascript:;"><b class="caret pull-right"></b>Devolucion</a>
                                 <ul class="sub-menu">
                                     <li ui-sref-active="active"><a ui-sref="app.gestion.documento.devolucion.devolver">Devolver ND</a></li>
                                     <li ui-sref-active="active"><a ui-sref="app.gestion.documento.devolucion.detalle">Detalle ND</a></li>
                                 </ul>
                             </li>
-                            <li class="has-sub" ng-class="{active:$state.includes('app.gestion.documento.rendicion)}">
+                            <li class="has-sub" ng-class="{active:$state.includes('app.gestion.documento.rendicion')}">
                                 <a href="javascript:;"><b class="caret pull-right"></b>Rendicion</a>
                                 <ul class="sub-menu">
                                     <li ui-sref-active="active"><a ui-sref="app.gestion.documento.rendicion.rendir">Rendir ND</a></li>
