--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -1,1 +1,206 @@
-30901
+<div ng-controller="B2B_Fact_Obje_Resp_Controller">
+    <!-- begin breadcrumb -->
+    <ol class="breadcrumb pull-right">
+        <li><a href="javascript:;">Home</a></li>
+        <li><a href="javascript:;">Gestión</a></li>
+        <li><a href="javascript:;">Documentos</a></li>
+        <li><a href="javascript:;">Devolución</a></li>
+        <li class="active">30901 - Devolver</li>
+    </ol>
+    <!-- end breadcrumb -->
+    <!-- begin page-header -->
+    <h1 class="page-header">Devolver nd <small>Gestión de Viaje</small></h1>
+    <!-- end page-header -->
+
+    <!-- begin row -->
+    <div class="row">
+
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Filtros de Busqueda </h4>
+                </div>
+
+                <div class="panel-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Numero de Viaje</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                            <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="10021" />
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Origen</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>00 CD- SANTIAGO</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Destino</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>45 CONCEPCION</option>
+                                    <option>41 TALCA</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha</label>
+                            <div class="col-md-6">
+                                <div class="input-group input-daterange">
+                                    <input type="text" class="form-control" name="start" placeholder="Inicio" />
+                                    <span class="input-group-addon">a</span>
+                                    <input type="text" class="form-control" name="end" placeholder="Termino" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Estado Viaje</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Cargando</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                            <label class="col-md-2 control-label">Estado Facturacion</label>
+                            <div class="col-md-2">
+                                <select class="form-control">
+                                    <option>Todos</option>
+                                    <option>Facturado</option>
+                                    <option>Recibido</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Acciones:</label>
+                            <div class="col-md-9">
+                                <button type="submit" class="btn btn-sm btn-success">Buscar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+        <div class="col-md-12">
+            <!-- begin panel -->
+            <div class="panel panel-inverse">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Solicitudes Registradas </h4>
+                </div>
+
+                <div class="panel-body">
+                    <table id="data-table" class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>N° Despacho</th>
+                            <th>N°MC</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Estado ND</th>
+                            <th>Boleta</th>
+                            <th>N°ND</th>
+                            <th>Fecha</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
+                            <td>55 CD - SANTIAGO</td>
+                            <td>45 TI - CONCEPCIÓN</td>
+                            
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214222</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>17 TI-TALCA</td>
+                            <td>EN VIAJE</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>15 ARICA</td>
+                            <td>CREADO</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214223</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>14 PUERTO MONTT</td>
+                            <td>CERRADO</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214224</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>36 ANTOFAGASTA</td>
+                            <td>ESPERANDO SALIDA</td>
+
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214225</a></td>
+                            <td>TRONCAL</td>
+                            <td>TRANSPORTES DEL PACIFICO</td>
+                            <td>CM40</td>
+                            <td>00 CD-SANTIAGO</td>
+                            <td>19 LA FLORIDA</td>
+                            <td>EN VIAJE</td>
+
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="col-md-1">
+                        <p>
+                            Acciones :
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <p>
+                            <button class="btn btn-info" >Cancelar</button>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <!-- end panel -->
+        </div>
+    </div>
+    <!-- end row -->
+</div>
