--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -33,11 +33,11 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Numero de Viaje</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="10021" />
+                                <input type="text" class="form-control" placeholder="210021" />
                             </div>
                             <label class="col-md-2 control-label">Numero de Manifiesto de Carga</label>
                             <div class="col-md-2">
-                                <input type="text" class="form-control" placeholder="10021" />
+                                <input type="text" class="form-control" placeholder="5615021" />
                             </div>
                         </div>
 
