--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -116,74 +116,36 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>N° Despacho</th>
-                            <th>N°MC</th>
+                            <th>N°Viaje</th>
+                            <th>Tipo</th>
+                            <th>Transportista</th>
                             <th>Origen</th>
                             <th>Destino</th>
-                            <th>Estado ND</th>
-                            <th>Boleta</th>
+                            <th>N°MC</th>
+                            <th>N°Boleta</th>
                             <th>N°ND</th>
-                            <th>Fecha</th>
+                            <th>Estado ND</th>
+                            <th>Localidad</th>
+                            <th>Metodo</th>
+                            <th>Tamaño</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
-                            <td><a href="../../carga_todos.html">15222</a></td>
+                            <th>DDC</th>
+                            <td>TRANSPORTES PIPAU</td>
                             <td>55 CD - SANTIAGO</td>
-                            <td>45 TI - CONCEPCIÓN</td>
-                            
+                            <td>95 - ZONA 3</td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
+                            <td><a href="../../carga_todos.html">4515227</a></td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
+                            <td>EN REPARTO</td>
+                            <td>97 - ZONA 3</td>
+                            <td>EXPRESS</td>
+                            <td>MEDIANO</td>
+                        </tr>
 
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214222</a></td>
-                            <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>17 TI-TALCA</td>
-                            <td>EN VIAJE</td>
-
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214223</a></td>
-                            <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>15 ARICA</td>
-                            <td>CREADO</td>
-
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214223</a></td>
-                            <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>14 PUERTO MONTT</td>
-                            <td>CERRADO</td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214224</a></td>
-                            <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>36 ANTOFAGASTA</td>
-                            <td>ESPERANDO SALIDA</td>
-
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="../../carga_todos.html">214225</a></td>
-                            <td>TRONCAL</td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM40</td>
-                            <td>00 CD-SANTIAGO</td>
-                            <td>19 LA FLORIDA</td>
-                            <td>EN VIAJE</td>
-
-                        </tr>
                         </tbody>
                     </table>
                     <div class="col-md-1">
