--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -9,7 +9,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Devolver nd <small>Gestión de Viaje</small></h1>
+    <h1 class="page-header">Devolver Documento <small>Gestión de Viaje</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -30,6 +30,17 @@
 
                 <div class="panel-body">
                     <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Numero de ND</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="5615021" />
+                            </div>
+                            <label class="col-md-2 control-label">Boleta</label>
+                            <div class="col-md-2">
+                                <input type="text" class="form-control" placeholder="210021" />
+                            </div>
+
+                        </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Numero de Viaje</label>
                             <div class="col-md-2">
@@ -68,24 +79,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Estado Viaje</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>Todos</option>
-                                    <option>Cargando</option>
-                                    <option>Recibido</option>
-                                </select>
-                            </div>
-                            <label class="col-md-2 control-label">Estado Facturacion</label>
-                            <div class="col-md-2">
-                                <select class="form-control">
-                                    <option>Todos</option>
-                                    <option>Facturado</option>
-                                    <option>Recibido</option>
-                                </select>
-                            </div>
-                        </div>
+
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Acciones:</label>
@@ -133,7 +127,7 @@
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
-                            <th>DDC</th>
+                            <td>DDC</td>
                             <td>TRANSPORTES PIPAU</td>
                             <td>55 CD - SANTIAGO</td>
                             <td>95 - ZONA 3</td>
