--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -9,7 +9,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Devolver Documento <small>Gestión de Viaje</small></h1>
+    <h1 class="page-header">Devolucion ND <small>Gestión de Viaje</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
