--- a/views/Gestion/Documento/Rendicion/rendir.html
+++ b/views/Gestion/Documento/Rendicion/rendir.html
@@ -122,7 +122,7 @@
                             <th>Localidad</th>
                             <th>Metodo</th>
                             <th>Tamaño</th>
-                            <th>Devolver</th>
+                            <th>Rendir</th>
                         </tr>
                         </thead>
                         <tbody>
