--- a/views/Gestion/Documento/Rendicion/rendir.html
+++ b/views/Gestion/Documento/Rendicion/rendir.html
@@ -167,7 +167,9 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-success" >Rendir</button>
+                            <button class="btn btn-primary" >Entregar</button>
+                            <button class="btn btn-warning" >Devolver</button>
+                            <button class="btn btn-danger" >Anular</button>
                             <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
