--- a/views/B2B/Transportista/OF/generar.html
+++ b/views/B2B/Transportista/OF/generar.html
@@ -3,11 +3,13 @@
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
         <li><a href="javascript:;">B2B</a></li>
-        <li class="active">Revisa Viaje</li>
+        <li><a href="javascript:;">Transportista</a></li>
+        <li><a href="javascript:;">Ordenes de facturación</a></li>
+        <li class="active">90401 - Generar OF</li>
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Revisa Viaje <small>Gestión de B2B</small></h1>
+    <h1 class="page-header">Generar OF <small>Gestión de B2B</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -186,9 +188,8 @@
                     </div>
                     <div class="col-md-6">
                         <p>
-                            <button class="btn btn-success " >Agregar</button>
-
-                            <button class="btn btn-inverse" >Objetar</button>
+                            <button class="btn btn-success " >Generar OF</button>
+                            <button class="btn btn-danger" >Eliminar</button>
                             <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
